// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListFilters correctly 1`] = `
<div>
  <input
    onChange={[Function]}
    type="text"
    value=""
  />
  <select
    onChange={[Function]}
    value="date"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
  <DayPickerInput
    classNames={
      Object {
        "container": "DayPickerInput",
        "overlay": "DayPickerInput-Overlay",
        "overlayWrapper": "DayPickerInput-OverlayWrapper",
      }
    }
    clickUnselectsDay={false}
    component="input"
    dayPickerProps={
      Object {
        "disabledDays": Object {
          "after": 1970-01-01T00:00:00.000Z,
        },
        "modifiers": Object {
          "end": 1970-01-01T00:00:00.000Z,
          "start": 1970-01-01T00:00:00.000Z,
        },
        "onDayClick": [Function],
        "selectedDays": Array [
          1970-01-01T00:00:00.000Z,
          1970-01-01T00:00:00.000Z,
        ],
        "toMonth": 1970-01-01T00:00:00.000Z,
      }
    }
    format="DD-MM-YYYY"
    formatDate={[Function]}
    hideOnDayClick={true}
    inputProps={Object {}}
    keepFocus={true}
    onDayChange={[Function]}
    overlayComponent={[Function]}
    parseDate={[Function]}
    placeholder="01-01-1970"
    showOverlay={false}
    typedValue=""
    value=""
  />
   
  -
   
  <DayPickerInput
    classNames={
      Object {
        "container": "DayPickerInput",
        "overlay": "DayPickerInput-Overlay",
        "overlayWrapper": "DayPickerInput-OverlayWrapper",
      }
    }
    clickUnselectsDay={false}
    component="input"
    dayPickerProps={
      Object {
        "disabledDays": Object {
          "before": 1970-01-01T00:00:00.000Z,
        },
        "fromMonth": 1970-01-01T00:00:00.000Z,
        "modifiers": Object {
          "end": 1970-01-01T00:00:00.000Z,
          "start": 1970-01-01T00:00:00.000Z,
        },
        "selectedDays": Array [
          1970-01-01T00:00:00.000Z,
          1970-01-01T00:00:00.000Z,
        ],
      }
    }
    format="L"
    formatDate={[Function]}
    hideOnDayClick={true}
    inputProps={Object {}}
    keepFocus={true}
    onDayChange={[Function]}
    overlayComponent={[Function]}
    parseDate={[Function]}
    placeholder="01-01-1970"
    showOverlay={false}
    typedValue=""
    value=""
  />
  <button
    onClick={[Function]}
  >
    x
  </button>
</div>
`;

exports[`should render ExpenseListFilters with alt data correctly 1`] = `
<div>
  <input
    onChange={[Function]}
    type="text"
    value="bills"
  />
  <select
    onChange={[Function]}
    value="amount"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
  <DayPickerInput
    classNames={
      Object {
        "container": "DayPickerInput",
        "overlay": "DayPickerInput-Overlay",
        "overlayWrapper": "DayPickerInput-OverlayWrapper",
      }
    }
    clickUnselectsDay={false}
    component="input"
    dayPickerProps={
      Object {
        "disabledDays": Object {
          "after": 1970-01-04T00:00:00.000Z,
        },
        "modifiers": Object {
          "end": 1970-01-04T00:00:00.000Z,
          "start": 1970-01-01T00:00:00.000Z,
        },
        "onDayClick": [Function],
        "selectedDays": Array [
          1970-01-01T00:00:00.000Z,
          1970-01-04T00:00:00.000Z,
        ],
        "toMonth": 1970-01-04T00:00:00.000Z,
      }
    }
    format="DD-MM-YYYY"
    formatDate={[Function]}
    hideOnDayClick={true}
    inputProps={Object {}}
    keepFocus={true}
    onDayChange={[Function]}
    overlayComponent={[Function]}
    parseDate={[Function]}
    placeholder="01-01-1970"
    showOverlay={false}
    typedValue=""
    value=""
  />
   
  -
   
  <DayPickerInput
    classNames={
      Object {
        "container": "DayPickerInput",
        "overlay": "DayPickerInput-Overlay",
        "overlayWrapper": "DayPickerInput-OverlayWrapper",
      }
    }
    clickUnselectsDay={false}
    component="input"
    dayPickerProps={
      Object {
        "disabledDays": Object {
          "before": 1970-01-01T00:00:00.000Z,
        },
        "fromMonth": 1970-01-01T00:00:00.000Z,
        "modifiers": Object {
          "end": 1970-01-04T00:00:00.000Z,
          "start": 1970-01-01T00:00:00.000Z,
        },
        "selectedDays": Array [
          1970-01-01T00:00:00.000Z,
          1970-01-04T00:00:00.000Z,
        ],
      }
    }
    format="L"
    formatDate={[Function]}
    hideOnDayClick={true}
    inputProps={Object {}}
    keepFocus={true}
    onDayChange={[Function]}
    overlayComponent={[Function]}
    parseDate={[Function]}
    placeholder="04-01-1970"
    showOverlay={false}
    typedValue=""
    value=""
  />
  <button
    onClick={[Function]}
  >
    x
  </button>
</div>
`;
